# probe-aeneas

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TESTING.md
.github/workflows/: ci.yml  release.yml
docs/: SCHEMA-FIXES.md  SCHEMA.md  USAGE.md  architecture.md  primary-spec-violations.md  testing.md  validation-merged-json.md
examples/: aeneas_curve25519-dalek_4.1.3.json  aeneas_curve25519-dalek_4.1.3_summary.md  curve25519-dalek-summary.md  functions.json  lean_Curve25519Dalek_0.1.0.json  merged_rust_lean_atoms.json  rust_curve25519-dalek_4.1.3.json  rust_curve25519-dalek_4.1.3_atoms.json  translations.json
src/: aeneas_config.rs  enrich.rs  extract.rs  extract_runner.rs  gen_functions.rs  lib.rs  listfuns.rs  main.rs  merge.rs  setup.rs  translate.rs  types.rs
tests/: extract_check.rs
