[package]
name = "probe-aeneas"
version = "0.1.0"
edition = "2021"
description = "Cross-language merge tool for Aeneas-transpiled projects (Rust ↔ Lean)"
license = "MIT"

[[bin]]
name = "probe-aeneas"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
probe = { git = "https://github.com/Beneficial-AI-Foundation/probe.git" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
