[package]
name = "probe-aeneas"
version = "0.1.0"
edition = "2021"
description = "Cross-language extract tool for Aeneas-transpiled projects (Rust ↔ Lean)"
license = "MIT"
repository = "https://github.com/Beneficial-AI-Foundation/probe-aeneas"
keywords = ["aeneas", "lean", "rust", "call-graph", "cross-language"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "probe-aeneas"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
probe = { path = "../probe" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
