[package]
name = "probe-aeneas"
version = "0.3.0"
edition = "2021"
description = "Cross-language extract tool for Aeneas-transpiled projects (Rust ↔ Lean)"
license = "MIT"
repository = "https://github.com/Beneficial-AI-Foundation/probe-aeneas"
keywords = ["aeneas", "lean", "rust", "call-graph", "cross-language"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "probe_aeneas"
path = "src/lib.rs"

[[bin]]
name = "probe-aeneas"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
probe = { git = "https://github.com/Beneficial-AI-Foundation/probe" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
which = "7"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
